--- a/index.html
+++ b/index.html
@@ -9,22 +9,87 @@
 </head>
 <body>
     <header>
-<h1>Chilling Café</h1>
+            <figure>
+                    <img src="./assets/images/67119.png" alt="tasse">
+            </figure>
+            <h1>Chilling Café</h1>
     </header>
-    <figure>
-contenu
-    </figure>
+   
     <main>
         <section>
             <h2>Menu des café</h2>
-            <div class="entete">chaud froid tiède</div>
-            <div class="blanc">americain 10$ 15$ -</div>
-            <div class="clair">capucino 15$ 18$ 20$</div>
-            <div class="blanc">café crème 10$ 15$ 20$</div>
-            <div class="clair">café frappé 15$ 18$ 20$</div>
-            <div class="blanc">café noir 10$ 15$ -</div>
-            <div class="clair">expresso 10$ - -</div>
-            <div class="blanc">allongé 15$ - -</div>
+
+            <div class="entete">
+                <div class="haut">
+                    <div class="chaud">chaud</div>  
+                    <div class="froid">froid</div>  
+                    <div class="tiede">tiède</div> 
+                </div>
+            </div>
+
+            <div class="blanc">
+                <div class="titre"> americain</div> 
+                <div class="prix">
+                        <div class="dix">10$</div> 
+                        <div class="quinze">15$ </div> 
+                        <div class="zero">......</div>  
+               </div>
+            </div>
+
+            <div class="clair">
+               <div class="titre">capucino</div>  
+               <div class="prix">
+                    <div class="dix">15$</div> 
+                    <div class="quinze">18$ </div> 
+                    <div class="zero">20$</div> 
+                </div> 
+            </div>
+
+            <div class="blanc">
+                <div class="titre">café crème </div> 
+                <div class="prix">
+                        <div class="dix">10$</div> 
+                        <div class="quinze">15$ </div> 
+                        <div class="zero">20$</div> 
+                </div> 
+            </div>
+
+            <div class="clair">
+                <div class="titre">café frappé </div> 
+                <div class="prix">
+                        <div class="dix">15$</div> 
+                        <div class="quinze">18$ </div> 
+                        <div class="zero">20$</div> 
+                </div> 
+            </div>
+
+            <div class="blanc">
+                <div class="titre">café noir </div> 
+                <div class="prix">
+                    <div class="dix">10$</div> 
+                    <div class="quinze">15$ </div> 
+                    <div class="zero">......</div> 
+                </div> 
+            </div>
+
+            <div class="clair">
+                <div class="titre">expresso </div> 
+                <div class="prix">
+                    <div class="dix">10$</div> 
+                        <div class="quinze">......</div> 
+                        <div class="zero">......</div>
+                </div> 
+            </div>
+
+            <div class="blanc">
+                <div class="titre">allongé </div> 
+                <div class="prix">
+                    <div class="dix">15$</div> 
+                    <div class="quinze">......</div> 
+                    <div class="zero">......</div>
+                </div> 
+            </div>
+
         </section>
         <section>
             <h2>Menu des café</h2>
